# new-site

./: README.md  pyproject.toml
scripts/: build_site.py  check_posts.py
site/src/pages/blog/: an-introduction-to-value-at-risk.md  efficient-rolling-windows-ops-in-numpy.md  historical-simulations-lets-look-back.md  how-to-read-and-parse-data-in-python.md  mark-it-down.md  parametric-value-at-risk.md  python-starter-pack-part-2.md  python-starter-pack-pt1.md  some-tips-when-working-with-pandas.md  the-minibuilder-mindset.md
site/src/static/: extra.css  global.css
src/new_site/: __init__.py  build.py  schemas.py
src/new_site/templates/: blog_post.html  layout.html
tests/: test_frontmatter.py
tests/fixtures/: frontmatter.md
