[project]
name = "new-site"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Maxime Filippini", email = "maxime.filippini@gmail.com" }
]
dependencies = [
    "jinja2>=3.1.3",
    "PyYAML>=6.0.1",
    "pydantic>=2.6.1",
    "markdown>=3.5.2",
    "pymdown-extensions>=10.7",
    "watchdog>=4.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye.scripts]
test = "pytest ."
tailwind = [
    "npx", "tailwindcss", 
    "-i", "./site/src/static/input.css", 
    "-o", "./site/src/static/global.css",  
    "--watch"
]

[tool.rye]
managed = true
dev-dependencies = [
    "djLint>=1.34.1",
    "pytest>=8.0.0",
    "ipykernel>=6.29.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/new_site"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
